# DSM1D

./: CMakeLists.txt  build.sh  build_gnu.sh
dsmFFT/: CMakeLists.txt  Makefile  cmake_install.cmake  menv.mod  module_env.f90  module_rotations.f90  module_spline.f90  mrot.mod  mspline.mod  myTraFFT.f90  others.f90
dsmPSV/: .gitignore  CMakeLists.txt  Makefile  calmat.f90  cmake_install.cmake  dcsymbdl.f90  myTraPSV.f90  myTraPSVmpi.f90  myTraPSVmpi_ms.f90  others.f90  trial.f90
dsmSH/: CMakeLists.txt  Makefile  calmat.f90  cmake_install.cmake  formpi.f90  myTraSH.f90  myTraSHmpi.f90  myTraSHmpi_ms.f90  others.f90  trial.f90
example/: .gitignore  1Dsohl.psv.model  config.fft  config.slv  job_fft.sbatch  job_psv.sbatch  job_sh.sbatch  stations.txt  stations_nrm.txt
model/: EH45TcoldCrust1rq.psv.model
utils/: CMakeLists.txt  merge.f90
